--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,12 +8,19 @@
 
 html {
   font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.4;
   overflow-x: hidden;
+}
+
+html,
+body,
+#root {
+  position: relative;
+  margin: 0;
+  min-height: 100vh;
 }
